--- a/fit.html
+++ b/fit.html
@@ -7,6 +7,11 @@
     <title>Fitness Tracker</title>
     <link rel="stylesheet" href="./fit.css">
     <style>
+        *
+        {
+            margin:0;
+            padding:0;
+        }
 body {
    font-family: Helvetica, sans-serif;
     overflow: hidden;
